--- a/worldcore/package.json
+++ b/worldcore/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "start": "parcel test.html",
+    "lint": "eslint ."
+  },
   "author": "Brian Upton",
   "license": "ISC",
   "dependencies": {
-    "@croquet/croquet": "file:../croquet"
+    "@croquet/croquet": "file:../libraries/packages/croquet"
   },
   "devDependencies": {
     "eslint": "^5.14.1",
